# bike-line-protocol

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  library.properties  new_schedule.jsonc
.github/workflows/: ci.yml
docs/: CMakeLists.txt  conf.py  index.rst  integration.rst  requirements.txt
docs/c_api/: application.rst  diagnostics.rst  index.rst  tester.rst  transport.rst
docs/codegen/: config.rst
docs/hardware/: design.rst  index.rst  master.rst
docs/protocol/: application.rst  diagnostics.rst  index.rst  physical.rst  schedules.rst  transport.rst
docs/python/: analyze.rst  cli.rst  codegen.rst  discovery.rst  index.rst  monitor.rst  monitoring.rst  network.rst  plot.rst
docs/python_api/: encoding.rst  index.rst  master.rst  network.rst  request.rst  schedule.rst  transport.rst  util.rst  virtual_bus.rst
docs/python_tools/: codegen.rst  discovery.rst  index.rst
examples/arduino/: .gitignore  README.md  arduino.ino  codegen.json  line-protocol-test.ino  network.json
hardware/: .gitignore  line-usb-master.kicad_pcb  line-usb-master.kicad_pro  line-usb-master.kicad_sch  local.kicad_sym
hardware/assembly/: Bezel_Banana.stl  Bezel_JWPF_Bottom.stl  Bezel_JWPF_Top.stl  Bezel_USB.stl  pcb_outline.dxf
hardware/local.pretty/: 3305SMD-POT.kicad_mod  BananaJack_15.3mm.kicad_mod  HPI0530.kicad_mod  S3PCBKP.kicad_mod  USB_B_Lumberg_2411_02_Horizontal.kicad_mod
hardware/models/: 61400416121.stp  Multicomp_24_243_1.STEP  S3PCBKP.step
python-lib/: .gitignore  pytest.ini  setup.py
python-lib/examples/: dev_info.py  network.json
python-lib/line_protocol/: __init__.py
python-lib/line_protocol/codegen/: generator.py  header.jinja2  source.jinja2
python-lib/line_protocol/monitor/: __init__.py  cli.py  config.py  measurement.py  traffic.py
python-lib/line_protocol/network/: __init__.py  loader.py  network.py  nodes.py  request.py  schedule.py
python-lib/line_protocol/plot/: config.py  ui.py
python-lib/line_protocol/protocol/: __init__.py  cli.py  constants.py  master.py  scheduler.py  simulation.py  transport.py  util.py  virtual_bus.py
python-lib/line_protocol/util/: __init__.py  discovery.py  schedule_analyze.py
python-lib/tests/: conftest.py  test_code_generation.py  test_discovery_tool.py  test_encoding.py  test_master_vbus.py  test_network_load.py  test_schedule_analysis.py
python-lib/tests/data/: codegen.json  network-1.json  schedules-test.json
src/: app_adapter.c  application.c  diagnostics.c  line_application.h  line_diagnostics.h  line_protocol.h  line_tester.h  line_transport.h  line_transport_priv.h  transport.c
tests/: CMakeLists.txt  test_ApplicationInterface.cpp  test_ApplicationSignals.cpp  test_TransportReceive.cpp  test_network.json
